# CELESTIAL-1

./: README.md  pyproject.toml  requirements.txt
celestial/: model.py  utils.py
cstx/: README.md  inference.py  model.py  train.py  utils.py
cstx/dataset/: __init__.py  audiocap_dataset.py  base_dataset.py  cc3m_dataset.py  instruction_dataset.py  samplers.py  utils.py  webvid_dataset.py
cstx/decoders/: audio.py  image.py  language.py  video.py
cstx/utils/: agent.py  embeds.py  logger.py  qformer.py  utils.py
