[tool.poetry]
name = "cstx"
version = "0.1.0"
description = "Description of the cstx package"
authors = ["Kye Gomez <kye@apac.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "*"
six = "*"
easydict = "*"
ftfy = "*"
einops = "*"
decord = "*"
transformers = "*"
pytorch-lightning = "*"
timm = "*"
torchlibrosa = "*"
librosa = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
